# my_type_of_game

./: Cargo.toml  rustfmt.toml
src/: lib.rs  ui.rs
src/ui/: screens.rs
src/ui/screens/: ingame_menu.rs  ingame_screen.rs  main_screen.rs  new_game_screen.rs  settings_menu.rs  settings_screen.rs
